--- a/css/style.css
+++ b/css/style.css
@@ -507,8 +507,9 @@ span {
         width: 90vw;
     }
 
-    .footer {
-        flex-direction: column-reverse;
+
+    .footer-iconTop {
+        display: none;
     }
 
     .footer p {
