--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ span {
 }
 
 .portfolio-layer p {
-    font-size: 1.6rem;
+    font-size: 5rem;
     margin: .3rem 0 1rem;
 }
 
@@ -486,6 +486,15 @@ span {
     .portfolio-container {
         grid-template-columns: 1fr;
     }
+
+    .footer p {
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+    .footer-iconTop {
+        display: none;
+    }
 }
 
 @media (max-width: 450px) {
@@ -495,6 +504,15 @@ span {
 
     .contact form .input-box input {
          width: 100%;
+    }
+
+    .footer-iconTop {
+        display: none;
+    }
+
+    .footer p {
+        text-align: center;
+        margin-top: 2rem;
     }
 }
 
