--- a/projetos/Jogo da Velha/css/styles.css
+++ b/projetos/Jogo da Velha/css/styles.css
@@ -132,3 +132,19 @@ h1 {
    
 } 
 
+@media(max-width: 450px ) {
+    #message p {
+        font-size: 32px;
+        width: 350px;
+        top: 185px;
+    }
+}
+
+@media(max-width: 420px) {
+    #message p {
+        font-size: 26px;
+        width: 320px;
+        top: 190px;
+    }
+}
+
